--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Linear scale item for Feedback plugin
+Linear scale item for LMS Moodle Feedback plugin
 Edited radio FORM element to create radio with label above radiobutton.
 
 Copy folder scale in to mod/feedback/item/
